feat(policy): add setRule and update queryPolicy route
